--- a/roles/zaloha/tasks/main.yml
+++ b/roles/zaloha/tasks/main.yml
@@ -3,9 +3,10 @@
       name: proxmox-backup
       state: latest
 
+
 - name: create cronjob to backup every day
   cron:
       name: "proxmox backup"
       minute: "{{backup_crontab_minute}}"
       hour: "{{ backup_crontab_hour }}"
-      job: "proxmox-backup-client backup backup.pxar:{{backup_path}} --repository {{backup_server_ip}}:{{backup_datastore}}"
+      job: "proxmox-backup-client backup {{backup_name_path}} --repository {{backup_server_ip}}:{{backup_datastore}}"
