--- a/roles/zaloha/tasks/main.yml
+++ b/roles/zaloha/tasks/main.yml
@@ -1,13 +1,20 @@
 - name: install backup client
-  dnf:
-      name: proxmox-backup
-      state: latest
-      update_cache: true
+  yum:
+    name: proxmox-backup
+    state: latest
+    update_cache: true
 
+- name: copy shell script to remote server
+  template:
+    src: zaloha.sh.j2
+    dest: "{{ backup_file_dest }}"
+    mode: '0740'
+    owner: root
+    group: root
 
 - name: create cronjob to backup every day
   cron:
-      name: "proxmox backup"
-      minute: "{{backup_crontab_minute}}"
-      hour: "{{ backup_crontab_hour }}"
-      job: "proxmox-backup-client backup {{backup_name_path}} --repository {{backup_server_ip}}:{{backup_datastore}}"
+    name: "proxmox backup"
+    minute: "{{ backup_crontab_minute }}"
+    hour: "{{ backup_crontab_hour }}"
+    job: "{{ backup_file_dest }}"
