fixed vars not exported

--- a/roles/zaloha/defaults/main.yml
+++ b/roles/zaloha/defaults/main.yml
@@ -2,7 +2,7 @@
 backup_crontab_minute: 0
 backup_crontab_hour: 3
 backup_name_path: backup.pxar:/path backup2.pxar:/path2
-backup_server_ip: 10.10.10.10:8007
+backup_server_repo: root@pam@10.10.10.10:8007
 backup_datastore: datastore1
 backup_script_dest: /usr/local/bin/backup.sh
 PBS_PASSWORD: password
